# jojo

.github/workflows/: jojo.yaml
jupyter/: .gitignore  01-init.sh  02-build.sh  03-serve.sh  environment.yml  pyproject.toml
jupyter/contents/: 20250108-masodfok.py  20250109-masodfok-teljes-negyzet.py  20250114-fileaccess.py  20250115-eve-joe-bicycle.py
jupyter/contents-data/: test.csv
latex/20240421/: hf.tex
latex/20240508/: hf.tex
latex/20240703/: ferenc-lajos.py
latex/pi/: Makefile  pi.c  pi.py  pi.tex  pi2.c  piiv.py  pisok.py  result.iv10.100000  result.pisok.plus5.100000  sqrt2.py
python/: 20250208-adventure-v1.py  20250208-mitirki-parameters.py  20250209-adventure-v2.py  20250210-adventure-from-jojo.py  20250212-adventure-before-oop.py  20250212-adventure-classes.py  202503-rubik.py  resources.md
python/gergo-advent-2017/: 01-2.py  01.py  02-1.py  03-1-egyszeru.py  03-1-matek.py  03-2.py  03.py  04-1.py  04-2.py  05-1.py  05-2.py  06-1.py  06-2.py  07-1.py  07-2.py  08-1.py  08-2.py  09-1.py  09-2.py  10-1.py  10-2.py  11-1.py  11-2-masik.py  11-2.py  11-input.py  12-1.py  12-2.py  13-1.py  13-2.py  18-1.py  18-2.py  19-1.py  19-2.py
