[project]
name = "jupyterlite-jojo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "ipycanvas>=0.13.3,<1",
    "ipykernel>=6.29.5,<7",
    "jupyter-server>=2.15.0,<3",
    "jupyterlab-filesystem-access>=0.6.0",
    "jupyterlab-night>=0.5.1,<1",
    "jupyterlab-server>=2.27.3,<3",
    "jupyterlite-core>=0.4.5,<0.5.0",
    "jupyterlite-p5-kernel>=0.1.1,<1",
    "jupyterlite-xeus>=2.1.2,<3",
    "jupytext>=1.16.6,<2",
    "nbconvert[webpdf]>=7.16.5,<8",
    "numpy>=2.2.1",
    "plotly>=5.24.1,<6",
    "sympy>=1.13.3,<2",
    "tabulate>=0.9.0,<1",
]
